##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: MIT
##==================================================================================================
add_subdirectory(core)
add_subdirectory(math)
add_custom_target(random.core)
add_custom_target(random.math)
