##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Project Contributors
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================
add_subdirectory(core)
add_subdirectory(math)
add_custom_target(random.core)
add_custom_target(random.math)
